--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "pinia": "^2.0.0-rc.10",
+    "swiper": "^8.0.6",
     "vue": "^3.2.25"
   },
   "devDependencies": {
