--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "date-fns": "^2.28.0",
     "pinia": "^2.0.0-rc.10",
     "swiper": "^8.0.6",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue3-datepicker": "^0.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
