--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "hammerjs": "^2.0.8",
     "pinia": "^2.0.0-rc.10",
     "swiper": "^8.0.6",
     "vue": "^3.2.25",
-    "vue3-datepicker": "^0.3.2"
+    "vue3-datepicker": "^0.3.2",
+    "vue3-insta-stories": "^0.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
