--- a/package.json
+++ b/package.json
@@ -8,20 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "animejs": "^3.2.1",
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
-    "hammerjs": "^2.0.8",
-    "pinia": "^2.0.0-rc.10",
+    "pinia": "^2.0.11",
     "swiper": "^8.0.6",
     "vue": "^3.2.25",
     "vue3-datepicker": "^0.3.2",
-    "vue3-insta-stories": "^0.1.0",
     "zuck.js": "^1.6.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.0",
-    "sass": "^1.49.7",
-    "vite": "^2.8.0"
+    "@vitejs/plugin-vue": "^2.2.2",
+    "sass": "^1.49.8",
+    "vite": "^2.8.4"
   }
 }
