--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "date-fns": "^2.28.0",
+    "debounce": "^1.2.1",
     "pinia": "^2.0.11",
     "swiper": "^8.0.6",
     "vue": "^3.2.25",
